ehleh button nemdeg bjee

--- a/game.html
+++ b/game.html
@@ -6,11 +6,11 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-<title>WordBeater</title>
+<title>FastWriter</title>
 </head>
 <body class="bg-dark text-white">
    <header class="bg-secondary text-center p-1 mb-3">
-      <h2>WordBeater</h2>
+      <h2>FastWriter</h2>
    </header>
 
    <div class="row">
